update(admin) user update, file upload, and other stuff

--- a/web/admin/src/main/resources/messages/messages.properties
+++ b/web/admin/src/main/resources/messages/messages.properties
@@ -7,3 +7,11 @@ lang.ar=العربية
 lang.ar.code=ar
 lang.change=Change language
 user-form=User form
+actions=Actions
+name=Name
+account-status=Account Status
+role=Role
+email=Email
+edit=Edit
+delete=Delete
+user-image=User image
