--- a/web/admin/src/main/resources/messages/messages.properties
+++ b/web/admin/src/main/resources/messages/messages.properties
@@ -1,8 +1,8 @@
 greetings=Welcome
 create-new-user=Create new user
 users=Users
-lang.eng=English
-lang.eng.code=en
+lang.en=English
+lang.en.code=en
 lang.ar=العربية
 lang.ar.code=ar
 lang.change=Change language
@@ -15,3 +15,4 @@ email=Email
 edit=Edit
 delete=Delete
 user-image=User image
+locale=en
