--- a/web/admin/src/main/resources/messages/messages_ar.properties
+++ b/web/admin/src/main/resources/messages/messages_ar.properties
@@ -1,8 +1,9 @@
 greetings=مرحبا بك
 create-new-user=إنشاء مستخدم
 users=المستخدمون
-lang.eng=English
-lang.eng.code=en
+lang.en=English
+lang.en.code=en
 lang.ar=العربية
 lang.ar.code=ar
 user-form=استمار مستخدم
+locale=ar
