fix(admin/users) fixes in users view

--- a/web/admin/src/main/resources/messages/messages.properties
+++ b/web/admin/src/main/resources/messages/messages.properties
@@ -12,7 +12,27 @@ name=Name
 account-status=Account Status
 role=Role
 email=Email
+enter-email=Enter email address
 edit=Edit
 delete=Delete
 user-image=User image
 locale=en
+firstname=First name
+lastname=Last name
+enter-firstname=Enter first name
+enter-lastname=Enter last name
+next=Next
+previous=Previous
+active=Active
+disabled=Disabled
+password=Password
+enter-password=Enter password
+submit=Submit
+cancel=Cancel
+profile=Profile
+settings=Settings
+logout=Logout
+login=Login
+GoBuy=GoBuy
+manage-system-users=Manage system users
+admin-panel=Admin Panel
