update(admin) adding routing rules and login page

--- a/web/admin/src/main/resources/messages/messages.properties
+++ b/web/admin/src/main/resources/messages/messages.properties
@@ -38,3 +38,4 @@ manage-system-users=Manage system users
 admin-panel=Admin Panel
 export-csv=Export CVS
 export-pdf=Export PDF
+remember-me=Remember me
