update(admin/configs) updating web security to allow user authentication, adding redis to handle session persistent

--- a/web/admin/src/main/resources/messages/messages.properties
+++ b/web/admin/src/main/resources/messages/messages.properties
@@ -39,3 +39,7 @@ admin-panel=Admin Panel
 export-csv=Export CVS
 export-pdf=Export PDF
 remember-me=Remember me
+failed=Failed
+bad-credential=Bad credentical
+logged-out=Logged out
+you-have-logged-out=You have logged out
