admin(error-pages|logs) adding error pages and log files setup to be put in prod profile

--- a/web/admin/src/main/resources/messages/messages.properties
+++ b/web/admin/src/main/resources/messages/messages.properties
@@ -43,3 +43,14 @@ failed=Failed
 bad-credential=Bad credentical
 logged-out=Logged out
 you-have-logged-out=You have logged out
+error=Error
+error.401=Authentication Error
+error.401.message=Authentication Error
+error.403=Authorization Error
+error.403.message=Authorization Error
+error.404=Not Found
+error.404.message=Not Found
+error.500=Server Error
+error.500.message=Server Error
+error.unexpected=Unexpected error
+error.unexpected.message=Unexpected error
